--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -37,11 +38,14 @@
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
     --page-background: white;
+
     --scrollbar-track: transparent;
     --scrollbar-thumb: #545454;
     --scrollbar-thumb-hover: #5c5c5f;
+
     --scrollbar-width: 12px;
   }
+
   .dark {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
@@ -77,6 +81,7 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
+
 @layer base {
   * {
     @apply border-border;
@@ -85,28 +90,38 @@
     @apply bg-background text-foreground;
   }
 }
+
 .backdrop--blur__safari {
   -webkit-backdrop-filter: blur(5px);
-} /* Firefox */
+}
+
+/* Firefox */
 * {
   scrollbar-width: thin; /* none | auto  */
   scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
-} /* Firefox */ /* Chrome, Edge, Safari */
+}
+/* Firefox */
+
+/* Chrome, Edge, Safari */
 *::-webkit-scrollbar {
   width: var(--scrollbar-width); /* vertical scrollbar */
   height: var(--scrollbar-width); /* horizontal scrollbar */
 }
+
 *::-webkit-scrollbar-track {
   background: var(--scrollbar-track);
 }
+
 *::-webkit-scrollbar-thumb {
   background: var(--scrollbar-thumb);
   border-radius: var(--scrollbar-width);
   border: calc(var(--scrollbar-width) / 4) solid var(--page-background);
 }
+
 *::-webkit-scrollbar-thumb:hover {
   background: var(--scrollbar-thumb-hover);
 }
+
 .radial--gradient {
   background-image: radial-gradient(
     ellipse farthest-side,
@@ -116,6 +131,7 @@
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
+
 .radial--gradient--pink {
   background-image: radial-gradient(
     at center,
@@ -125,6 +141,7 @@
   background-size: 70% 80%;
   background-repeat: no-repeat;
 }
+
 .radial--gradient--automations {
   background-image: radial-gradient(
     at top left,
@@ -134,6 +151,7 @@
   background-size: 40% 100%;
   background-repeat: no-repeat;
 }
+
 .radial--double--gradient--cards--top {
   background-image: radial-gradient(
     at top left,
@@ -143,6 +161,7 @@
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
+
 .radial--double--gradient--cards--bottom {
   background-image: radial-gradient(
     at bottom right,
